--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,34 +29,34 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    //noinspection GradleCompatible
+    //引入支持库大礼包
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:support-vector-drawable:$support_version"
+    implementation "com.android.support:support-v4:$support_version"
+    implementation "com.android.support:support-v13:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-
     //butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     //retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     //retrofit2 引入Gson支持
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
     //retrofit2 引入RxJava2支持
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-
     //retrofit2 引入RxJava支持
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
-
     //RxJava2
     implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
-
     //Gson
     implementation 'com.google.code.gson:gson:2.8.5'
-
     //ARouter
     implementation 'com.alibaba:arouter-api:1.3.1'
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
