--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        //SmartTable必须
+        maven { url 'https://www.jitpack.io' }
     }
 }
 
