--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,8 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+// 与build.gradle 文件相关  相当于静态常量值 集中进行第三方库的版本控制
+ext{
+    support_version = "27.1.1"
+}
