--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,9 @@ android {
                 arguments = [moduleName: project.getName()]
             }
         }
-
+        dataBinding{
+            enabled = true
+        }
     }
 
     buildTypes {
@@ -65,4 +67,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
+
 }
