--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
                 arguments = [moduleName: project.getName()]
             }
         }
-        dataBinding{
+        dataBinding {
             enabled = true
         }
     }
@@ -26,6 +26,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
     }
 }
 
